Move demos into an examples' folder:
* `.cargo/config` placed in workspace root.
* Removes nested `.gitignore`

--- a/examples/example-utils/Cargo.toml
+++ b/examples/example-utils/Cargo.toml
@@ -5,7 +5,7 @@ categories = ["embedded", "no-std"]
 keywords = ["arm", "nrf", "bluetooth", "low", "energy"]
 repository = "https://github.com/jonas-schievink/rubble/"
 license = "0BSD"
-name = "demo-utils"
+name = "example-utils"
 version = "0.0.0"
 edition = "2018"
 publish = false
