--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,7 @@ members = [
     "rubble",
     "rubble-nrf5x",
     "rubble-tests",
-    "demos/*/",
-]
-exclude = [
-    "demos/.cargo"
+    "examples/*",
 ]
 
 [profile.dev]
