--- a/crates/rubble/Cargo.toml
+++ b/crates/rubble/Cargo.toml
@@ -4,34 +4,21 @@ version = "0.0.4"
 edition = "2021"
 
 [dependencies]
-bitflags = "1.2.1"
-heapless = "0.7.1"
-rand_core = "0.6.3"
-sha2 = { version = "0.9.0", default-features = false }
-zerocopy = "0.5.0"
-defmt = "0.2.3"
+bitflags = "1"
+heapless = "0.7"
+rand_core = "0.6"
+sha2 = { version = "0.10", default-features = false }
+zerocopy = "0.6"
+defmt = "0.3"
 
-[dependencies.p256]
-version = "0.9.0"
-default-features = false
-features = ["arithmetic"]
+p256 = { version = "0.13", default-features = false, features = ["arithmetic"] }
 
 # The `ring` feature can be enabled to provide P-256 operations for non-embedded use cases.
-[dependencies.ring]
-version = "0.16.9"
-default-features = false
-optional = true
+ring = { version = "0.16", default-features = false, optional = true }
 
 # If the `log` feature is enabled, the `log` crate's macros will be called at various points to dump
 # packets, state, and events. By default, it is disabled.
-[dependencies.log]
-version = "0.4.8"
-optional = true
+log = { version = "0.4", optional = true }
 
 [dev-dependencies]
 ring = "0.16.9"
-
-[dev-dependencies.p256]
-version = "0.9.0"
-default-features = false
-features = ["arithmetic"]
